helm/full-php-stack/ingress-manual.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longterm-ingress
  namespace: longterm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: longterm.adamchilders.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longterm-php-stack-varnish
            port:
              number: 80
